--- a/Ruby_on_Rails_ReactJS/excoincial-ui/public/index.html
+++ b/Ruby_on_Rails_ReactJS/excoincial-ui/public/index.html
@@ -40,7 +40,7 @@
       rel="stylesheet"
     />
     <title>
-      WaVer - Free React template for building an SaaS or admin application
+      Excoincial
     </title>
   </head>
   <body>
